Fixed Text Alignment For Section Title

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,7 @@ body {
 .section-title {
     display: flex;
     justify-content: flex-end;
-    text-align: left;
+    text-align: right;
     width: 20%;
     font-size: 50px;
     border-right: 2px solid;
